@@ -1,3 +1,7 @@
+namcap (3.2.2)
+    - rename elffiles rule to elfpaths
+    - add elftextrel rule to detect text relocations (FS#26434)
+
 namcap (3.2.1)
     - fix: glibfiles rules ineffective because of wrong schema
       filename pattern
